Made registration certificate and degree certifiates updates optional. They will be uploaded only when its provided by Front End.